# oberon0-runtime

./: .pre-commit-config.yaml  README.md  gitlab-ci.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
src/oberon0_runtime/: __init__.py
tests/: test_basic.py
